Options page done

--- a/source/options.html
+++ b/source/options.html
@@ -7,7 +7,7 @@
 	<div class="font-selector-container">
 		<select name="fontWeight" id="font-weight">
 			<option value="400">Normal</option>
-			<option value="500">Medium</option>
+			<option value="500" selected>Medium</option>
 			<option value="600">Semi-Bold</option>
 			<option value="700">Bold</option>
 			<option value="800">Extra-Bold</option>
@@ -15,7 +15,7 @@
 		</select>
 		<div class="example">
 			<p>
-				<span id="example-text">Exa</span>mple
+				<span id="example-text" style="font-weight: 500;">Exa</span>mple
 			</p>
 		</div>
 	</div>
