Updated replacement on 50%

--- a/source/options.html
+++ b/source/options.html
@@ -7,8 +7,8 @@
 	<div class="font-selector-container">
 		<select name="fontWeight" id="font-weight">
 			<option value="400">Normal</option>
-			<option value="500" selected>Medium</option>
-			<option value="600">Semi-Bold</option>
+			<option value="500">Medium</option>
+			<option value="600" selected>Semi-Bold</option>
 			<option value="700">Bold</option>
 			<option value="800">Extra-Bold</option>
 			<option value="900">Black</option>
