Popup and auto option added

--- a/source/options.html
+++ b/source/options.html
@@ -19,7 +19,13 @@
 			</p>
 		</div>
 	</div>
-	<h3>Selectors</h3>
+	<h3>Auto Detection</h3>
+	<div class="text-inputs">
+		<label class="text-input">
+			<span>Auto detects the Selectors on page and</span>
+			<input type="checkbox" id="auto" name="auto" placeholder="Enter CSS selectors separated by commas">
+		</label>
+	</div>
 	<div class="text-inputs">
 		<label class="text-input">
 			<span>Enter selectors for Boldify</span>
